@@ -3,6 +3,16 @@
 # Distributed under the GPL v2
 
   13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
+  modules/catalyst/target/embedded.py, modules/catalyst/target/generic.py,
+  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
+  modules/catalyst/target/livecd_stage1.py,
+  modules/catalyst/target/livecd_stage2.py,
+  modules/catalyst/target/netboot.py, modules/catalyst/target/stage1.py,
+  modules/catalyst/target/stage2.py, modules/catalyst/target/stage3.py,
+  modules/catalyst/target/stage4.py, modules/catalyst/target/tinderbox.py:
+  Remove all references to 'spec' and 'addlargs' in target modules
+
+  13 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
   modules/catalyst/config.py:
   All targets have been updated not to use the spec_prefix, so we don't need
   to save the prefixed keys anymore
